registry/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: registry
  namespace: registry
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`registry.runicrealms.com`)
      kind: Rule
      services:
        - name: registry
          port: 5000
          scheme: http
          serversTransport: "registry-server-transport"
